welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var fin = 4
  for (i<- 0 to nums.length-1) {
    if (nums(i)==9 && i<=3) {
      return true
    } else return false
  }
}